--- a/conf/application.conf
+++ b/conf/application.conf
@@ -352,3 +352,7 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+projects {
+  basedir = "/opt/workspace"
+}
