Refactor Docker build

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -356,4 +356,7 @@ db {
 projects {
   basedir = "/opt/workspace"
 }
+queue {
+  url = "http://queue:9000/"
+}
 play.crypto.secret = ${?APPLICATION_SECRET}
